# basic-matrix

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  eigenvalues.cpp  eigenvalues.hpp  gauss_newton.cpp  gauss_newton.hpp  gaussian_elimination.cpp  gaussian_elimination.hpp  inverse.cpp  io.cpp  io.hpp  k_means.cpp  k_means.hpp  knn.cpp  knn.hpp  lup_decomposition.cpp  lup_decomposition.hpp  matrix.cpp  matrix.hpp  naive_gradient_descent.cpp  naive_gradient_descent.hpp  ops.cpp  optimization_problem.cpp  optimization_problem.hpp  qr_factorization.cpp  qr_factorization.hpp  repl.cpp  scalar.cpp  scalar.hpp  standard_functions.cpp  standard_functions.hpp
tests/: CMakeLists.txt  eigenvalues.cpp  gauss_newton.cpp  gaussian_elimination.cpp  inverse.cpp  io.cpp  k_means.cpp  knn.cpp  lup_decomposition.cpp  matrix.cpp  matrix_helpers.cpp  matrix_helpers.hpp  ops.cpp  optimization_problem.cpp  qr_factorization.cpp  standard_functions.cpp  test_helpers.cpp  test_helpers.hpp
